decaf-compiler/samples/lex/badreserve.decaf.out

*** Error line 5.
newarray
^^^^^^^^
*** syntax error

